<resources>
    <string name="app_name">Practica3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_medicion">Medición de temperatura</string>
    <string name="menu_conversor">Conversor</string>
    <string name="menu_configuracion">Configuración</string>>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_localizacion">Localización</string>
    <string name="menu_cerrar">Cerrar sesión</string>
    <string name="password">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnMedicion">Medición de Temperatura</string>
    <string name="btnConversor">Conversor</string>
    <string name="btnConfiguracion">Configuración</string>
    <string name="btnCerraSesion">Cerrar Sesion</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="temperatura">Temperatura</string>
    <string name="poblacion">Población</string>
    <string name="provincia">Provincia</string>
    <string name="rbCelsius">Celsius</string>
    <string name="rbFahrenheit">Fahrenheit</string>
    <string name="btnMenu">Menu</string>
    <string name="btnGuardar">Guardar</string>
    <string name="cbRecordar">Recordar usuario</string>
    <string name="tvconversorCF">Celsius -> Fahrenheit</string>
    <string name="tvconversorFC">Fahrenheit -> Celsius</string>
</resources>