<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.configuracion.ConfiguracionFragment">

    <ImageView
        android:id="@+id/imageView6"
        app:srcCompat="@drawable/logo_app_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvConfiguracion" />

    <TextView
        android:id="@+id/tvConfiguracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnConfiguracion"
        app:layout_constraintTop_toBottomOf="@id/imageView6"
        app:layout_constraintBottom_toTopOf="@id/constraint3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="200dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvConfiguracion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Switch
            android:id="@+id/swCelsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/constraint3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/swFahrenheit"
            app:layout_constraintStart_toEndOf="@id/tvCelsius"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="50dp"
            android:checked="true"/>

        <Switch
            android:id="@+id/swFahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/swCelsius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvFahrenheit"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/tvCelsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/rbCelsius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/swCelsius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.228" />

        <TextView
            android:id="@+id/tvFahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbFahrenheit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/swFahrenheit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCelsius"
            android:layout_marginTop="50dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardar"
        app:layout_constraintTop_toBottomOf="@id/constraint3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>